# NetReceipt

./: .gitignore  ARCHITECTURE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  ux-audit-report.html
.github/workflows/: build.yml
docs/: index.html  robots.txt  sitemap.xml  styles.css
src/: App.test.tsx  App.tsx  about-dialog.tsx  analytics.ts  api.ts  chart.ts  components.tsx  domain.test.ts  domain.ts  export-dialog.tsx  history-dialog.tsx  main.tsx  presentation.ts  styles.css  test-setup.ts  useMonitor.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  export.rs  history.rs  main.rs  models.rs  monitor.rs  state.rs
