[package]
name = "netreceipt"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2.3"
tauri-plugin-dialog = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "3", features = ["rustls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
